--- a/css/keyboard.css
+++ b/css/keyboard.css
@@ -1,17 +1,17 @@
 #keyboard {
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
     flex: 4;
     padding: 1%;
-    height: 100px;
+    height: 150px;
 }
 
-#keys {
+.keys {
     display: flex;
     justify-content: center;
     position: relative;
     height: 100%;
-    width: 20%;
+    width: 15%;
 }
 
 .note {
@@ -24,6 +24,7 @@
     position: relative;
     justify-content: center;
     height: 60%;
+    outline: 2px solid #474747;
     background-color: #474747;
     color: white;
     margin: 0 -4%;
@@ -32,9 +33,14 @@
 .white {
     flex-flow: column;
     justify-content: flex-end;
-    outline: 2px solid #474747;
+    outline: 2px solid #d3d3d3;
     color: #474747;
     background-color: #ffffff;
     padding-bottom: 1%;
     flex: 1.6;
+}
+
+.selected {
+  background-color: #d3d3d3;
+  outline: 2px solid #d3d3d3;
 }
