Stuff I don't remember

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Keyboard */
+
 #keyboard {
     display: flex;
     flex-flow: row;
@@ -9,9 +11,6 @@
 .keys {
     display: flex;
     justify-content: center;
-    position: relative;
-    height: 100%;
-    width: 15%;
 }
 
 .note {
@@ -43,4 +42,17 @@
 .selected {
   background-color: #d3d3d3;
   outline: 2px solid #d3d3d3;
+}
+
+/* Interface */
+
+.settings {
+  display: flex;
+  flex-flow: row;
+}
+
+.settingbox {
+  outline: 1px solid #d3d3d3;
+  display: inline-block;
+  padding: 5px;
 }
