--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,13 @@
     flex-flow: row;
     flex: 4;
     padding: 1%;
-    height: 150px;
+    height: 100px;
 }
 
 .keys {
     display: flex;
     justify-content: center;
+    width: 20%;
 }
 
 .note {
